--- a/HiveEngine/HiveEngine/HiveEngine.vcxproj
+++ b/HiveEngine/HiveEngine/HiveEngine.vcxproj
@@ -175,6 +175,8 @@
     <ClCompile Include="InputManager.cpp" />
     <ClCompile Include="Material.cpp" />
     <ClCompile Include="Node.cpp" />
+    <ClCompile Include="Particle.cpp" />
+    <ClCompile Include="ParticleEmitter.cpp" />
     <ClCompile Include="QuadTree.cpp" />
     <ClCompile Include="QuadTreeNode.cpp" />
     <ClCompile Include="UIElement.cpp" />
@@ -223,6 +225,8 @@
     <ClInclude Include="Model.h" />
     <ClInclude Include="Node.h" />
     <ClInclude Include="ObjectPool.h" />
+    <ClInclude Include="Particle.h" />
+    <ClInclude Include="ParticleEmitter.h" />
     <ClInclude Include="ParticleSystemComponent.h" />
     <ClInclude Include="ParticleSystemData.h" />
     <ClInclude Include="PlayerInputComponent.h" />
